[project]
name = "uhd-keras"
version = "1.0.0"
description = "Ultra-lightweight human detection (Keras ver)."
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "datasets==4.3.0",
    "huggingface-hub==1.0.1",
    "matplotlib==3.10.7",
    "pyarrow==22.0.0",
    "requests==2.32.5",
    "numpy==1.26.4",
    "onnx==1.19.0",
    "onnxruntime-gpu==1.23.0",
    "opencv-python==4.11.0.86",
    "pandas==2.3.3",
    "tqdm==4.67.1",
    "tensorboard==2.19.0",
    "onnxsim==0.4.30",
    "sit4onnx==1.0.10",
    "bbalg==1.0.2",
    "pyyaml==6.0.2",
    "pycocotools==2.0.8",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "ai-edge-litert==1.2.0",
    "ml_dtypes==0.5.1",
    "tf2onnx==1.16.1",
]
[tool.uv]
override-dependencies = [
    "protobuf==4.25.1",
]
